Added POST/calories endpoint for getting and counting calories
