# api/src/api/calories.py
@@ -10,6 +10,29 @@ from src.util import check, response, log
 from src.rapidapi import imagga, nutritionix
 
 
+def post():
+    request_body = request.json
+    if not check.exist('image_url', request_body) and not check.exist('image_base64', request_body):
+        return response.build(error=True, error_message='No specified image in the request body.')
+    if check.exist('image_url', request_body) and check.exist('image_base64', request_body):
+        return response.build(error=True, error_message='Both image_url and image_base64 specified.')
+
+    if check.exist('image_url', request_body):
+        tags_list = imagga.extract_tags_url(request_body['image_url'])
+    else:
+        tags_list = imagga.extract_tags_base64(request_body['image_base64'])
+
+    if not tags_list:
+        return response.build(error=True, error_message='Invalid input image.')
+
+    response_dict = {'total_calories': 0.0, 'ingredients': []}
+    for ingredient in tags_list:
+        calories_count = nutritionix.get_ingredient_calories(ingredient)
+        response_dict['total_calories'] += calories_count
+        response_dict['ingredients'].append({'calories': calories_count, 'ingredient': ingredient})
+    return response.build(error=False, response=response_dict)
+
+
 def ingredients_post():
     request_body = request.json
     if not check.exist('image_url', request_body) and not check.exist('image_base64', request_body):
